--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luimplifier</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- React + ReactDOM (UMD builds) e Babel standalone para transpilar JSX no navegador -->
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="src/App.jsx"></script>
+    <!-- Carrega o App escrito em JSX; Babel transpila na hora (funciona sem bundler) -->
+    <script type="text/babel" src="src/App.jsx"></script>
   </body>
 </html>
