--- a/index.html
+++ b/index.html
@@ -1,18 +1,324 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Luimplifier</title>
-    <link rel="stylesheet" href="style.css" />
-    <!-- React + ReactDOM (UMD builds) e Babel standalone para transpilar JSX no navegador -->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <!-- Carrega o App escrito em JSX; Babel transpila na hora (funciona sem bundler) -->
-    <script type="text/babel" src="src/App.jsx"></script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Luiflier - Lua Simplifier</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #dfe5ed;
+      font-family: Verdana, Arial, Tahoma, sans-serif;
+      font-size: 13px;
+      color: #222;
+    }
+    .navbar {
+      width: 100%;
+      background: #2356a0;
+      border-bottom: 3px solid #0a3167;
+      color: #fff;
+      font-size: 15px;
+      font-weight: bold;
+    }
+    .navbar-table {
+      width: 900px;
+      margin: 0 auto;
+      border-collapse: collapse;
+    }
+    .nav-logo {
+      font-size: 2em;
+      color: #fff;
+      padding-right: 16px;
+      font-family: Arial Black, Arial, sans-serif;
+      letter-spacing: 2px;
+      text-shadow: 2px 2px 0 #0a3167;
+      font-weight: bold;
+    }
+    .navbar td {
+      padding: 8px 18px;
+      border-right: 1px solid #0a3167;
+      text-align: center;
+    }
+    .navbar td:last-child {
+      border-right: none;
+    }
+    .navbar a {
+      color: #fff;
+      text-decoration: none;
+    }
+    .navbar a:hover, .navbar .active {
+      text-decoration: underline;
+      color: #e0eaff;
+    }
+    .main-table {
+      width: 900px;
+      margin: 24px auto 0 auto;
+      background: #fff;
+      border: 2px solid #2356a0;
+      border-collapse: collapse;
+      box-sizing: border-box;
+    }
+    .main-left {
+      width: 180px;
+      background: #e3e7ef;
+      border-right: 2px solid #b1c2e7;
+      vertical-align: top;
+      padding: 12px;
+    }
+    .main-center {
+      padding: 20px 28px 24px 28px;
+      vertical-align: top;
+    }
+    .main-title {
+      font-family: Arial Black, Arial, sans-serif;
+      font-size: 1.5em;
+      color: #2356a0;
+      letter-spacing: 1px;
+      margin-bottom: 18px;
+      border-bottom: 2px solid #b1c2e7;
+      padding-bottom: 8px;
+      text-shadow: 1px 1px 0 #e3e7ef;
+    }
+    label {
+      font-weight: bold;
+      color: #0a3167;
+      margin-bottom: 6px;
+      display: block;
+    }
+    textarea {
+      width: 100%;
+      height: 120px;
+      font-family: "Courier New", Courier, monospace;
+      font-size: 13px;
+      border: 2px solid #b1c2e7;
+      background: #f6f8fa;
+      color: #222;
+      margin-bottom: 12px;
+      padding: 5px;
+      resize: vertical;
+    }
+    button, .classic-btn {
+      background: #2356a0;
+      color: #fff;
+      border: 2px solid #0a3167;
+      font-size: 15px;
+      font-family: Verdana, Arial, Tahoma, sans-serif;
+      font-weight: bold;
+      padding: 7px 26px;
+      cursor: pointer;
+      margin-bottom: 18px;
+      box-shadow: 1px 1px #e3e7ef;
+      transition: background 0.2s;
+      text-decoration: none;
+      display: inline-block;
+    }
+    button:hover, .classic-btn:hover {
+      background: #17407a;
+      color: #e0eaff;
+    }
+    .output-label {
+      font-weight: bold;
+      color: #0a3167;
+      margin-top: 16px;
+      display: block;
+    }
+    .output {
+      background: #f6f8fa;
+      border: 2px solid #b1c2e7;
+      color: #222;
+      font-family: "Courier New", Courier, monospace;
+      font-size: 13px;
+      padding: 10px;
+      min-height: 80px;
+      margin-top: 3px;
+      white-space: pre-wrap;
+    }
+    .footer {
+      width: 900px;
+      margin: 0 auto;
+      text-align: center;
+      color: #6c7da6;
+      font-size: 12px;
+      padding: 18px 0 8px 0;
+    }
+    .section-title {
+      font-family: Arial Black, Arial, sans-serif;
+      font-size: 1.2em;
+      color: #2356a0;
+      margin-top: 0;
+      margin-bottom: 10px;
+      border-bottom: 1px solid #b1c2e7;
+      padding-bottom: 2px;
+      letter-spacing: 1px;
+    }
+    .section-content {
+      font-size: 13px;
+      margin-bottom: 18px;
+      color: #222;
+      background: #f6f8fa;
+      border: 1px solid #b1c2e7;
+      padding: 9px;
+    }
+    .forum-list {
+      margin-top: 12px;
+    }
+    .forum-topic {
+      border-bottom: 1px dashed #b1c2e7;
+      padding: 8px 0;
+    }
+    .forum-topic:last-child {
+      border-bottom: none;
+    }
+    .forum-title {
+      font-weight: bold;
+      color: #2356a0;
+      font-size: 1.05em;
+      text-decoration: none;
+    }
+    .forum-meta {
+      color: #6c7da6;
+      font-size: 11px;
+      margin-left: 9px;
+    }
+    .new-topic-btn {
+      float: right;
+      margin-top: -8px;
+    }
+    @media (max-width: 950px) {
+      .navbar-table,
+      .main-table,
+      .footer {
+        width: 98vw;
+      }
+      .main-left {
+        display: none;
+      }
+      .new-topic-btn {
+        float: none;
+        display: block;
+        margin: 12px auto 6px auto;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="navbar">
+    <table class="navbar-table">
+      <tr>
+        <td class="nav-logo">Luiflier</td>
+        <td><a href="#" id="nav-simplifier" class="active">Simplifier</a></td>
+        <td><a href="#" id="nav-forum">Forum</a></td>
+        <td><a href="#" id="nav-about">About</a></td>
+      </tr>
+    </table>
+  </div>
+  <table class="main-table">
+    <tr>
+      <td class="main-left"></td>
+      <td class="main-center">
+        <div id="page-simplifier">
+          <div class="main-title">Lua Code Beautifier</div>
+          <label for="input">Paste your Roblox Lua code below:</label>
+          <textarea id="input" placeholder="-- Paste your Lua code here"></textarea>
+          <br>
+          <button id="beautifyBtn">Beautify</button>
+          <span class="output-label">Beautiful code:</span>
+          <div id="output" class="output"></div>
+        </div>
+        <div id="page-forum" style="display:none;">
+          <div class="section-title">
+            Forum
+            <a class="classic-btn new-topic-btn" href="https://github.com/colabyteproductions/Roblox-Lua-Simplifier/issues/new" target="_blank">New Topic</a>
+          </div>
+          <div class="section-content">
+            <div class="forum-list" id="forum-list">
+              Loading topics...
+            </div>
+            <div style="font-size:12px;color:#6c7da6;margin-top:8px;">
+              To post, click "New Topic". To reply, use GitHub.
+            </div>
+          </div>
+        </div>
+        <div id="page-about" style="display:none;">
+          <div class="section-title">About</div>
+          <div class="section-content">
+            Luiflier is a retro-inspired Lua code beautifier for Roblox developers, made by Colabyte Productions.<br>
+            The forum uses GitHub Issues, so you can open topics and reply directly on GitHub.<br>
+            <br>
+            <b>Why "Luiflier"?</b> Lua + Simplifier = Beautiful code!
+          </div>
+        </div>
+      </td>
+    </tr>
+  </table>
+  <div class="footer">
+    &copy; 2025 Colabyte Productions &mdash; Classic 2008 Roblox Style
+  </div>
+  <script>
+    // Navigation
+    function showPage(pageId) {
+      const pages = ['page-simplifier','page-forum','page-about'];
+      pages.forEach(function(id) {
+        document.getElementById(id).style.display = (id === pageId ? 'block' : 'none');
+      });
+      const navs = ['nav-simplifier','nav-forum','nav-about'];
+      navs.forEach(function(nav, idx) {
+        document.getElementById(nav).classList.remove('active');
+        if(pageId === pages[idx]) document.getElementById(nav).classList.add('active');
+      });
+      if(pageId === 'page-forum') loadForum();
+    }
+    document.getElementById('nav-simplifier').onclick = function(){showPage('page-simplifier');}
+    document.getElementById('nav-forum').onclick = function(){showPage('page-forum');}
+    document.getElementById('nav-about').onclick = function(){showPage('page-about');}
+
+    // Beautifier logic
+    function beautifyLua(code) {
+      // Remove single-line comments
+      let beautiful = code.replace(/--.*$/gm, '');
+      // Remove multi-line comments
+      beautiful = beautiful.replace(/--\[\[[\s\S]*?\]\]/gm, '');
+      // Remove extra blank lines and trim
+      beautiful = beautiful.replace(/^\s*$(?:\r\n?|\n)/gm, '');
+      beautiful = beautiful.trim();
+      return beautiful;
+    }
+    document.getElementById('beautifyBtn').onclick = function() {
+      const code = document.getElementById('input').value;
+      if (!code.trim()) {
+        document.getElementById('output').textContent = 'Please paste some Lua code!';
+        return;
+      }
+      const result = beautifyLua(code);
+      document.getElementById('output').textContent = result || '(No output)';
+    };
+
+    // Forum rendering - fetch GitHub Issues
+    function loadForum() {
+      const forumList = document.getElementById('forum-list');
+      forumList.textContent = 'Loading topics...';
+      fetch('https://api.github.com/repos/colabyteproductions/Roblox-Lua-Simplifier/issues?state=open')
+        .then(r => r.json())
+        .then(data => {
+          if (!Array.isArray(data) || data.length === 0) {
+            forumList.innerHTML = '<div style="color:#6c7da6;">No topics found.</div>';
+            return;
+          }
+          let html = '';
+          data.forEach(issue => {
+            html += `<div class="forum-topic">
+              <a class="forum-title" href="${issue.html_url}" target="_blank">${issue.title}</a>
+              <span class="forum-meta">by ${issue.user.login}</span>
+              <span class="forum-meta">${(new Date(issue.created_at)).toLocaleDateString()}</span>
+            </div>`;
+          });
+          forumList.innerHTML = html;
+        })
+        .catch(()=>{
+          forumList.innerHTML = '<div style="color:#d00;">Error loading topics.</div>';
+        });
+    }
+  </script>
+</body>
 </html>
