--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     </tr>
   </table>
   <div class="footer">
-    &copy; 2025 Colabyte Productions &mdash; Classic 2008 Roblox Style
+    &copy; 2025 Colabyte Productions
   </div>
   <script>
     // Navigation
